[package]
name = "nvim-switcher"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to switch between different Neovim configurations."
readme = "README.md"
keywords = ["neovim", "nvim", "switcher", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "nvims"
path = "src/main.rs"
plugin = false
proc-macro = false
