[package]
name = "nvim-switcher"
version = "0.1.0"
edition = "2021"
description = "A CLI to easily switch between multiple Neovim configuration environments"
readme = "README.md"
keywords = ["neovim", "nvim", "switcher", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/Nitestack/nvim-switcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cliclack = "0.1.13"
colored = "2.1.0"
console = "0.15.8"
dirs = "5.0.1"
merge = "0.1.0"
prettytable-rs = "0.10.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "nvims"
path = "src/main.rs"
plugin = false
proc-macro = false
